package factory;

/**
 * Created by groot on 2017/3/26.
 */
public class BlackHuman implements Human {
    @Override
    public void getColor() {
        System. out. println(" 黑色 人黑色");
    }

    @Override
    public void tall() {
        System. out. println(" 黑色 人种 会 说话， 一般 都是 但是 单 字节。");

    }
}
