package factory;

/**
 * Created by groot on 2017/3/26.
 */
public interface Human {
      void getColor();
     void tall();
}
