package factory;

/**
 * Created by groot on 2017/3/26.
 */
public class YellowHuman implements Human{
    @Override
    public void getColor() {
        System. out. println(" 黄色 人黄色");
    }

    @Override
    public void tall() {
         System. out. println(" 黄色 人种 会 说话， 一般 都是 但是 多 字节。");

    }
}
